# CRCOpenROS2Driver

./: .env.dev  .gitignore  .gitlab-ci.yml  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh
.github/workflows/: ci.yml
comau_bringup/: CMakeLists.txt  package.xml
comau_bringup/launch/: comau_control.launch.py  comau_core.launch.py  comau_custom_controller.launch.py
comau_robots/comau_nj_130_2_6_description/: CMakeLists.txt  package.xml
comau_robots/comau_nj_130_2_6_description/controllers/: controllers.yaml
comau_robots/comau_nj_130_2_6_description/meshes/collision/: link_0.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl  link_7.stl  link_8.stl  link_9.stl  motor_bottom.stl  motor_left.stl  motor_top.stl  motor_wrist.stl
comau_robots/comau_nj_130_2_6_description/meshes/visual/: link_0.dae  link_1.dae  link_2.dae  link_3.dae  link_4.dae  link_5.dae  link_6.dae  link_7.dae  link_8.dae  link_9.dae  motor_bottom.dae  motor_left.dae  motor_right.dae  motor_top.dae  motor_wrist.dae
comau_robots/comau_nj_130_2_6_description/urdf/: nj_130_2_6.ros2_control.xacro  nj_130_2_6.urdf.xacro  nj_130_2_6_arm.urdf.xacro
crcopen_hardware/: CMakeLists.txt  crcopen_hardware.xml  package.xml
crcopen_hardware/include/: crcopen_hardware.hpp
crcopen_hardware/lib/: orl_driver-4.41.5.31647-Linux.deb
crcopen_hardware/src/: crcopen_hardware.cpp
scripts/: entrypoint.sh  install_dev.sh
